Update Christmas gift card message and structure for enhanced personalization

--- a/index.html
+++ b/index.html
@@ -7,24 +7,27 @@
     <title>Christmas Gift</title>
 </head>
 <body>
-    <canvas id="snow-canvas"></canvas>
+  <canvas id="snow-canvas"></canvas>
 
     <div class="scene" id="cardScene">
         <div class="card">
             <div class="card__face card__face--front">
-                <div class="ribbon"></div>
-                <div class="gift-tag">For You</div>
-                <div class="tap-hint">Tap to Open</div>
+                <i class="fas fa-heart heart-icon"></i>
+                <div class="front-text">A Secret For You</div>
+                <div class="click-hint">Tap to Reveal</div>
             </div>
 
             <div class="card__face card__face--back">
-                <h2 class="card-title">Merry Christmas!</h2>
-                <p class="card-text">
-                    May your holidays be as bright as the stars and as magical as this digital snow! 
+                <h2 class="back-title">Merry Christmas! 🎄</h2>
+                <div class="back-message">
+                    Hey PineApple! 🍍,
                     <br><br>
-                    Wishing you happiness, success, and bugs-free code in the coming year!
-                </p>
-                <p class="signature">With love,<br>Oz</p>
+                    Just like the snowflake answer, you are special. 
+                    I hope your holidays are filled with magic, laughter, and everything you've been wishing for.
+                    <br><br>
+                    Keep smiling! ✨
+                </div>
+                <div class="signature">- oshada palliyaguru</div>
             </div>
         </div>
     </div>
